Fix cancel bill
ẩn url